--- a/intro.html
+++ b/intro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Watch Shop</title>
+    <title>Music Club</title>
     <script src="jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="navagation.css"/>
