--- a/intro.html
+++ b/intro.html
@@ -21,7 +21,7 @@
         <li><a href='index.php'><span>Home</span></a></li>
         <li><a href='intro.html'><span>Intro</span></a></li>
         <li><a href='signUp.php'><span>Sign up</span></a></li>
-        <li><a href="UserMusic.php"><span>Your Music</span></a></li>
+        <li><a href="userMusic.php"><span>Your Music</span></a></li>
     </ul>
 </div>
 
@@ -31,7 +31,7 @@
         <img src="imgs/music.jpg"  height="625px">
     </div>
     <h3 style="text-align: center">About</h3>
-    <p style="font-size: large"></p>
+    <p style="font-size: large">"Music Club" is a service dedicated to sending you high quality albums from the genres you desire. Albums are chosen based on the genres you add to your list.</p>
 
 </div>
 </body>
