--- a/added.html
+++ b/added.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Watch Shop</title>
+    <title>Music Club</title>
     <script src="jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" type="text/css" href="navagation.css"/>
+    <link rel="stylesheet" type="text/css" href="navigation.css"/>
     <style>
         th{
             width: 24.9%;
@@ -18,8 +18,7 @@
 <body>
 
 <div id="content">
-<h3 align="center">Congratulations, you have successfully added this to the cart!</h3>
-    <p align="center"><a href="index.php">Back to shop</a></p>
+
 </div>
 </body>
 </html>
