--- a/added.html
+++ b/added.html
@@ -18,7 +18,9 @@
 <body>
 
 <div id="content">
-
+    <h3>Genre has been successfully added to your music list.</h3>
+    <p align="center"><a href="index.php">Back to list</a></p>
+    <p align="center"><a href="userMusic.php">To your music</a></p>
 </div>
 </body>
 </html>
