--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,13 @@
 </div>
 
 <div id="content">
-    <h1 align="center">Welcome</h1>
-    <div style="text-align: center">
-        <img src="imgs/music.jpg"  height="325px">
-    </div>
-    <h3 style="text-align: center">About</h3>
-    <p style="font-size: large">"Music Club" is a service dedicated to sending you high quality albums from the genres you desire. Albums are chosen based on the genres you add to your list.</p>
-    <p style="font-size: large"> This website is simple and easy to use.</p>
-    <p style="font-size: large">Genres may be added to your list from the home page.</p>
-    <p style="font-size: large">You can sign up at the Sign Up page</p>
-    <p style="font-size: large">Any questions or conserns may be voiced to us through our email given on our Contact & Info page</p>
+    <h1 align="center">Contact & Info</h1>
+    <h2 align="left">Contact</h2>
+    <h3>Email</h3>
+    <p>aiden.navarro@west-mec.org</p>
+    <h3>Phone</h3>
+    <p>N/A</p>
+    <h2 align="left">Info</h2>
 
 </div>
 </body>
