--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,15 @@
     <h3>Phone</h3>
     <p>N/A</p>
     <h2 align="left">Info</h2>
+    <h3>Frequently Asked Questions</h3>
+    <ul>
+        <li>How do you choose the music that is sent?</li>
+        <p>Albums are specifically chosen for you based on all your genre choices.</p>
+        <li>When do the albums get sent?</li>
+        <p>The albums are sent out before the end of the previous month to assure they arrive on the first of each month.</p>
+        <li>Can I cancel my subscription at any time, even after the monthly payment?</li>
+        <p>Yes; if you unsubscribe after a payment is made, but before you get your music, you will still be sent your album.</p>
+    </ul>
 
 </div>
 </body>
